finished shows and titles

--- a/vsc/styles/homeStyle.css
+++ b/vsc/styles/homeStyle.css
@@ -35,7 +35,7 @@
 }
 
 .music-scroll{
-    background: url("../assets/images/backgrounds/about.jpg") no-repeat center center;
+    background: url("../assets/images/backgrounds/music.png") no-repeat center center;
     padding-bottom: 3rem;
     min-height: 25vh;
 }
