compressed backgroudns and preloaded

--- a/vsc/styles/contactStyle.css
+++ b/vsc/styles/contactStyle.css
@@ -1,5 +1,5 @@
 .contact-section {
-  background: url("../assets/images/backgrounds/contact.png") no-repeat center center;
+  background: url("../assets/images/backgrounds/contact.webp") no-repeat center center;
   background-size: cover;
 
   min-height: 100vh;
