--- a/vsc/styles/showsStyle.css
+++ b/vsc/styles/showsStyle.css
@@ -1,5 +1,5 @@
 .shows-section {
-  background: url("../assets/images/backgrounds/shows.png") no-repeat center center;
+  background: url("../assets/images/backgrounds/shows.webp") no-repeat center center;
   background-size: cover;
 
   min-height: 100vh;
