--- a/vsc/styles/aboutStyle.css
+++ b/vsc/styles/aboutStyle.css
@@ -1,5 +1,5 @@
 .about-section {
-  background: url("../assets/images/backgrounds/about.jpg") no-repeat center center;
+  background: url("../assets/images/backgrounds/about.webp") no-repeat center center;
   background-size: cover;
 
   min-height: 100vh;
