--- a/vsc/styles/showsStyle.css
+++ b/vsc/styles/showsStyle.css
@@ -10,7 +10,7 @@
   flex-direction: column;
 }
 
-.contact-text {
+.shows-text {
   max-width: 800px;
   width: 100%;
   padding: 2rem 3rem;        /* reasonable padding */
@@ -26,7 +26,7 @@
   font-size: 2rem;
 }
 
-.contact-text p {
+.shows-text p {
   margin: 1rem 0;
   line-height: 1.2;
 }
